Add mit_type field which distinguishes text from image

--- a/textimagexblock/static/css/textimagexblock.css
+++ b/textimagexblock/static/css/textimagexblock.css
@@ -4,6 +4,10 @@
   position: relative !important;
 }
 
+.xblock-render .background {
+  width: auto !important;
+}
+
 .textimagexblock-wrapper {
   position: fixed;
   top: 0;
@@ -33,6 +37,10 @@
 .textimagexblock-wrapper hr {
   width: 25%;
   margin-left: 0;
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .textimagexblock-wrapper .content-text {
